--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.App-container {
+  height: 100vh;
+  margin: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
